# freshrss-claude

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/freshrss-category/: SKILL.md
skills/freshrss-category/scripts/: show_feeds.py
skills/freshrss-digest/: SKILL.md
skills/freshrss-digest/scripts/: stats_header.py
skills/freshrss-search/: SKILL.md
skills/freshrss-subscriptions/: SKILL.md
skills/freshrss-subscriptions/scripts/: list_feeds.py
src/freshrss_mcp/: __init__.py  __main__.py  config.py  server.py
tests/: test_config.py  test_models.py
